수정된 코드 반영된 테스트 코드